--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.16.0",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.3",
     "jspdf": "^2.5.2",
-    "mysql2": "^3.15.3",
     "next": "^16.0.10",
     "node-fetch": "^2.7.0",
     "openai": "^4.104.0",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.16.3",
     "prisma": "^5.22.0",
     "react": "^19.2.3",
