--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jspdf": "^4.0.0",
     "next": "^16.0.10",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^6.10.1",
     "openai": "^4.104.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.16.3",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.21",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.23",
